上架到应用商店通过版本1.0.0

--- a/leaveTD_engine/Push Demo/views/index.ejs
+++ b/leaveTD_engine/Push Demo/views/index.ejs
@@ -11,7 +11,7 @@
     <p><strong style="background-color: rgb(255, 255, 255);">【版本号：1.0.0】</strong></p>
 
     <br>
-    <p><strong style="background-color: rgb(255, 255, 255);">APP 名称：LeaveTD</strong></p>
+    <p><strong style="background-color: rgb(255, 255, 255);">APP 名称：LeanCloud</strong></p>
     <br>
 
     <br>
@@ -19,13 +19,13 @@
     <br>
 
     <p>
-      <span style="background-color: rgb(255, 255, 255);">我们尊重并保护所有使用“LeaveTD”</span>
-      <span style="background-color: rgb(255, 255, 255);">服务的用户（以下简称您)的个人隐私与信息安全。我们非常重视用户隐私和个人信息的保护。鉴于此，我们制定本《LeaveTD
-        服务隐私政策》（以下简称“本政策”）与您确认关于您在使用 LeaveTD 服务期间，收集、存储、使用、披露和保护您的个人信息的相关事宜。</span>
+      <span style="background-color: rgb(255, 255, 255);">我们尊重并保护所有使用“LeanCloud”</span>
+      <span style="background-color: rgb(255, 255, 255);">服务的用户（以下简称您)的个人隐私与信息安全。我们非常重视用户隐私和个人信息的保护。鉴于此，我们制定本《LeanCloud
+        服务隐私政策》（以下简称“本政策”）与您确认关于您在使用 LeanCloud 服务期间，收集、存储、使用、披露和保护您的个人信息的相关事宜。</span>
     </p>
 
-    <p><strong style="background-color: rgb(255, 255, 255);">请您务必认真阅读本政策，特别是粗体/粗体下划线标识的条款，您应重点阅读。在确认充分了解并同意后使用 LeaveTD
-        APP。<u>如果您/您的监护人不同意本政策的任何内容，您应该立即停止使用。</u>当您开始使用 LeaveTD
+    <p><strong style="background-color: rgb(255, 255, 255);">请您务必认真阅读本政策，特别是粗体/粗体下划线标识的条款，您应重点阅读。在确认充分了解并同意后使用 LeanCloud
+        APP。<u>如果您/您的监护人不同意本政策的任何内容，您应该立即停止使用。</u>当您开始使用 LeanCloud
         APP，即表示您/您的监护人已经同意我们按照本政策收集、保存、使用、共享、保护您的个人信息。</strong><span
         style="background-color: rgb(255, 255, 255);">如对本政策内容有任何疑问、意见或建议，您可通过本政策第六节提供的各种联系方式与我们联系。</span></p>
     <p><strong style="background-color: rgb(255, 255, 255);">本政策目录如下：</strong></p>
@@ -47,8 +47,8 @@
     </p>
     <p><strong style="background-color: rgb(255, 255, 255);">二、我们如何收集和使用您的个人信息</strong></p>
     <p><strong style="background-color: rgb(255, 255, 255);">您理解并同意：</strong></p>
-    <p><span style="background-color: rgb(255, 255, 255);">1.LeaveTD APP
-        功能分为基本功能，我们将详细向您说明各业务功能所收集的个人信息以及收集方法、目的，拒绝提供的影响。业务功能具体包括：</span>
+    <p><span style="background-color: rgb(255, 255, 255);">1.LeanCloud APP
+        功能分为基本功能和用户系统功能，我们将详细向您说明各业务功能所收集的个人信息以及收集方法、目的，拒绝提供的影响。业务功能具体包括：</span>
     </p>
     <p><span style="background-color: rgb(255, 255, 255);">1) 用户系统功能，包括使用用户名与密码创建账号，绑定用户手机号码，用户信息的保存与修改；</span></p>
     <p><span style="background-color: rgb(255, 255, 255);">2)APP
@@ -61,7 +61,7 @@
     <p><span
         style="background-color: rgb(255, 255, 255);">2)为实现向您提供我们产品及/或服务的附加功能，您可选择授权我们收集、使用的信息。如您拒绝提供，您将无法正常使用相关附加功能或无法达到我们拟达到的功能效果，但并不影响您正常使用我们产品及/或服务的基本功能。</span>
     </p>
-    <p><span style="background-color: rgb(255, 255, 255);">3.本政策所指必要范围个人信息是指消费侧用户（即使用 LeaveTD APP
+    <p><span style="background-color: rgb(255, 255, 255);">3.本政策所指必要范围个人信息是指消费侧用户（即使用 LeanCloud APP
         服务的您）个人信息，而不包括服务供给侧用户个人信息。</span>
     </p>
     <p><span
@@ -72,7 +72,7 @@
     </p>
     <p><strong style="background-color: rgb(255, 255, 255);">(一)基本功能</strong></p>
     <p><strong style="background-color: rgb(255, 255, 255);">账户注册与登录</strong></p>
-    <p><span style="background-color: rgb(255, 255, 255);">您使用 LeaveTD APP 服务前，需要创建账号。</span>
+    <p><span style="background-color: rgb(255, 255, 255);">您使用 LeanCloud APP 服务前，需要创建账号。</span>
     </p>
     <p><span style="background-color: rgb(255, 255, 255);">1) 需要向我们提供您的</span><strong
         style="background-color: rgb(255, 255, 255);"><u>用户名、</u></strong><strong
@@ -80,13 +80,13 @@
     <p><span style="background-color: rgb(255, 255, 255);">2) 在个人信息设置页面，可以选择是否提供手机号码，是否设置昵称。</span></p>
 
     <p><strong style="background-color: rgb(255, 255, 255);">(二）安全保障</strong></p>
-    <p><strong style="background-color: rgb(255, 255, 255);">1. LeaveTD APP 不会收集设备 Mac 地址，也不会采集唯一设备识别码（如 IMEI / android ID / IDFA /
+    <p><strong style="background-color: rgb(255, 255, 255);">1. LeanCloud APP 不会收集设备 Mac 地址，也不会采集唯一设备识别码（如 IMEI / android ID / IDFA /
         OPENUDID / GUID、SIM 卡 IMSI 信息等）对用户进行唯一标识。</strong></p>
-    <p><strong style="background-color: rgb(255, 255, 255);">2. LeaveTD APP 不会访问用户个人信息，也不会访问其他应用的数据信息。</strong></p>
+    <p><strong style="background-color: rgb(255, 255, 255);">2. LeanCloud APP 不会访问用户个人信息，也不会访问其他应用的数据信息。</strong></p>
 
     <p><strong style="background-color: rgb(255, 255, 255);">(三)设备权限调用</strong></p>
     <p><span style="background-color: rgb(255, 255, 255);">1.
-        LeaveTD APP 可能会调用您的一些设备权限，以下是调用权限对应的业务功能、我们调用权限的目的。</span></p>
+      LeanCloud APP 可能会调用您的一些设备权限，以下是调用权限对应的业务功能、我们调用权限的目的。</span></p>
     <p><strong style="background-color: rgb(255, 255, 255);">1)Android系统权限调用</strong></p>
     <style>
       th,
@@ -135,17 +135,17 @@
 
     <p><strong style="background-color: rgb(255, 255, 255);">三、我们如何存储您的个人信息</strong></p>
     <p><strong style="background-color: rgb(255, 255, 255);">1.个人信息保存期限</strong></p>
-    <p><span style="background-color: rgb(255, 255, 255);">1)在用户使用 LeaveTD APP 期间，我们将在合理必要的范围内持续保存用户的个人信息。</span></p>
+    <p><span style="background-color: rgb(255, 255, 255);">1)在用户使用 LeanCloud APP 期间，我们将在合理必要的范围内持续保存用户的个人信息。</span></p>
     <p><span
         style="background-color: rgb(255, 255, 255);">2)当您自主删除个人信息或注销账户，我们将按照法律、法规规定的最短期限保留您的现有个人信息。在法律法规要求的最短保存期限内，我们将不再对您的个人信息进行商业化使用。当您的个人信息超出上述保存期限，我们将会对其进行匿名化处理。</span>
     </p>
-    <p><span style="background-color: rgb(255, 255, 255);">3)为配合人民检察院、公安机关、国家安全机关侦查用户使用 LeaveTD APP
+    <p><span style="background-color: rgb(255, 255, 255);">3)为配合人民检察院、公安机关、国家安全机关侦查用户使用 LeanCloud APP
         服务过程中产生的犯罪行为，更好保护其他用户生命财产安全，当用户自主删除个人信息或注销账户，我们将在《刑法》规定的犯罪追诉时效期间内，加密隔离存档用户个人信息。</span>
     </p>
-    <p><span style="background-color: rgb(255, 255, 255);">4)如您使用 LeaveTD APP
+    <p><span style="background-color: rgb(255, 255, 255);">4)如您使用 LeanCloud APP
         的过程中，存在严重违反法律法规、平台协议、平台规则等情形，您的违法、违约记录及相应的平台信用记录，将被永久保存。</span>
     </p>
-    <p><span style="background-color: rgb(255, 255, 255);">5) LeaveTD APP 与您另行签署的具体的隐私协议就某类信息的保存期限做特殊约定的，从其约定。</span></p>
+    <p><span style="background-color: rgb(255, 255, 255);">5) LeanCloud APP 与您另行签署的具体的隐私协议就某类信息的保存期限做特殊约定的，从其约定。</span></p>
     <p><strong style="background-color: rgb(255, 255, 255);">2. 个人信息存储位置</strong></p>
     <p><span style="background-color: rgb(255, 255, 255);">1)我们收集的您的个人信息，将在中国内地存储和使用；</span></p>
     <p><span
@@ -155,7 +155,7 @@
     <p><strong style="background-color: rgb(255, 255, 255);">四、注销账号</strong></p>
 
 
-    <p><span style="background-color: rgb(255, 255, 255);">您可以通过 LeaveTD APP
+    <p><span style="background-color: rgb(255, 255, 255);">您可以通过 LeanCloud APP
         个人中心注销账号。除法律法规另有规定外，注销账号之后我们将停止为您提供服务，并根据本协议约定期限保存您的个人信息，保存期限届满后我们将对您的个人信息进行匿名化处理。</span>
     </p>
     <p><span
@@ -167,13 +167,13 @@
 
 
     <p><strong style="background-color: rgb(255, 255, 255);">五、我们如何更新隐私政策</strong></p>
-    <p><span style="background-color: rgb(255, 255, 255);">1.LeaveTD APP 发生以下变化，我们将及时对本政策进行相应的修订：</span></p>
-    <p><span style="background-color: rgb(255, 255, 255);">1)LeaveTD APP 业务功能发生变更；</span></p>
+    <p><span style="background-color: rgb(255, 255, 255);">1.LeanCloud APP 发生以下变化，我们将及时对本政策进行相应的修订：</span></p>
+    <p><span style="background-color: rgb(255, 255, 255);">1)LeanCloud APP 业务功能发生变更；</span></p>
     <p><span style="background-color: rgb(255, 255, 255);">2)用户个人信息保存地域发生变更；</span></p>
     <p><span style="background-color: rgb(255, 255, 255);">3)用户个人信息的使用规则发生变更；</span></p>
     <p><span style="background-color: rgb(255, 255, 255);">4)我们的联络方式及投诉渠道发生变更；</span></p>
     <p><span style="background-color: rgb(255, 255, 255);">5)发生其他可能影响用户个人信息安全或影响用户隐私权利的变更等。</span></p>
-    <p><span style="background-color: rgb(255, 255, 255);">2.本政策修订后，我们会在 LeaveTD APP
+    <p><span style="background-color: rgb(255, 255, 255);">2.本政策修订后，我们会在 LeanCloud APP
         发布最新版本，并以推送通知的方式告知用户，以便用户及时了解最新版本政策。</span>
     </p>
     <p><span style="background-color: rgb(255, 255, 255);">3.未经您的明确同意，我们不会削减您按照本政策所享有的权利。</span></p>
@@ -182,10 +182,10 @@
     <p><span style="background-color: rgb(255, 255, 255);">1.您可以通过以下方式向我们反馈您的意见和建议，或提供您的投诉举报信息：</span></p>
     <p><span style="background-color: rgb(255, 255, 255);">1)客服电话：13011098244；</span></p>
     <p><span style="background-color: rgb(255, 255, 255);">2)违法和不良信息举报邮箱：</span><u
-        style="background-color: rgb(255, 255, 255);">xsui@leancloud.rocks</u><span
+        style="background-color: rgb(255, 255, 255);">suixiaoxu@xd.com</u><span
         style="background-color: rgb(255, 255, 255);">；</span></p>
     <p><span style="background-color: rgb(255, 255, 255);">3)投诉/举报邮箱：</span><u
-        style="background-color: rgb(255, 255, 255);">xsui@leancloud.rocks</u><span
+        style="background-color: rgb(255, 255, 255);">suixiaoxu@xd.com</u><span
         style="background-color: rgb(255, 255, 255);">；</span></p>
 
     <p><span
